--- a/style.css
+++ b/style.css
@@ -1,4 +1,118 @@
 html {
   height: 100%;
   width: 100%;
+  font-family: "Ubuntu", sans-serif;
+}
+
+/*Top of the page items*/
+button{
+  background-color: #9D44B5;
+  color: white;
+}
+
+#logo{
+  font-weight: bold;
+  text-align: center;
+}
+
+#nav-barL{
+  background-color: #ff0054;
+  width: 600px;
+  display: flex;
+  justify-content: space-around;
+  font-size: 20px;
+  padding: 10px;
+}
+
+#nav-barR{
+  background-color: #ff0054;
+  width: 600px;
+  display: flex;
+  justify-content: space-around;
+  font-size: 20px;
+  padding: 10px;
+}
+
+.nav-bar{
+  display: flex;
+  justify-content: space-between;
+}
+
+#Welcome{
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  padding-top: 5px;
+}
+
+p{
+  font-weight: normal;
+  font-style: italic;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
+}
+
+
+/*Mid section stuff*/
+.card{
+  width: 300px;
+  margin: 10px 100px;
+}
+
+.col{
+  display: flex;
+}
+
+h3{
+  font-size: 40px;
+  font-style: italic;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mid-section{
+  display: flex; 
+  justify-content: space-between;
+}
+
+
+/*Bottom of the page stuff*/
+.card-group{
+  padding: 10px 50px;
+}
+
+#looking{
+  background-color: #ff0054;
+  color: white; 
+  font-weight: bold;
+  font-style: italic;
+  border: 3px solid black;
+}
+
+#s-icon{
+  background-color: #9d0034;
+  border: 3px solid black;
+  font-size: 16px;
+  color: white;
+}
+
+#search-button{
+  display: flex;
+  gap: 0px;
+}
+
+#mode{
+  background-color: #660022;
+  color: white; 
+  font-weight: bold;
+  font-style: italic;
+  border: 3px solid black;
+}
+
+.mini-nav2{
+  display: flex;
+  justify-content: space-between;
+  margin: 2px 2px;
 }
