--- a/style.css
+++ b/style.css
@@ -121,4 +121,16 @@ h3{
 /*Designs for the Second Page/brand kit*/
 #color-cards{
   display: flex;
+  justify-content:center;
+  flex-wrap: wrap;
+  
+}
+
+.card mb-3{
+  width: 100px;
+  border: 3px solid black;
+}
+
+.card-body{
+  width: 250px;
 }
