adding light/dark mode

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 
 /*Top of the page items*/
 button{
-  background-color: #9D44B5;
+  background-color: #cce6f4;
   color: white;
 }
 
@@ -116,6 +116,7 @@ h3{
   justify-content: space-between;
   margin: 2px 2px;
 }
+
 
 
 /*Designs for the Second Page/brand kit*/
