making more changes

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h3{
 
 
 
-/*Designs for the Second Page/brand kit*/
+/*Designs for the Second Page(brand kit)*/
 #color-cards{
   display: flex;
   justify-content:center;
